# FileIconExtractor

./: CMakeLists.txt  CMakePresets.json  README.md
FileIconExtractor/: --CMakeLists.txt  CMakeLists.txt  FileIconExtractor.cpp  Headers.h  IconSize.h
